--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ langchain-community>=0.4.1
 langchain-core>=1.2.9
 langchain-text-splitters>=1.1.0
 langgraph>=1.0.8
+langgraph-checkpoint-sqlite>=1.0.0
 dashscope>=1.25.11
 faiss-cpu>=1.13.2
 python-dotenv>=1.2.1
